Created the html elements with the correct styling

--- a/index.html
+++ b/index.html
@@ -5,11 +5,50 @@
   <title>Rock Paper Sciccors</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script src="index.js">
+  <link rel="stylesheet" type="" href="style.css">
+  <script src="index.js" defer>
   </script>
 </head>
 
 <body>
+
+  <div class="container">
+    <div class="score-container">
+      <div class="score" id="player-score">
+        p
+      </div>
+      <div class="score" id="computer-score">
+        c
+      </div>
+    </div>
+    <div class="display-container">
+      <div class="display">
+        <img src="asset/Rock.png" alt="Rock">
+      </div>
+      <div class="display">
+        <img src="asset/Paper.png" alt="Rock">
+      </div>
+    </div>
+
+    <div class="input">
+      <div id="rock" class="input-button">
+        <button type="">
+          <img src="asset/Rock.png" alt="Rock">
+        </button>
+      </div>
+      <div id="paper" class="input-button">
+        <button type="">
+          <img src="asset/Paper.png" alt="Rock">
+        </button>
+      </div>
+      <div id="scissor" class="input-button">
+        <button type="">
+          <img src="asset/Scissor.png" alt="Rock">
+        </button>
+      </div>
+    </div>
+
+  </div>
 
 </body>
 
