Added more id identifiers and score

--- a/index.html
+++ b/index.html
@@ -22,27 +22,31 @@
       </div>
     </div>
     <div class="display-container">
-      <div class="display">
-        <img src="asset/Rock.png" alt="Rock">
+      <div class="display" id="player-display">
+        <img src="asset/Rock.png" alt="Rock" class="active" id="player-rock-image">
+        <img src="asset/Paper.png" alt="Rock" id="player-paper-image">
+        <img src="asset/Scissor.png" alt="Rock" id="player-scissor-image">
       </div>
-      <div class="display">
-        <img src="asset/Paper.png" alt="Rock">
+      <div class="display" id="computer-display">
+        <img src="asset/Rock.png" alt="Rock" class="active" id="computer-rock-image">
+        <img src="asset/Paper.png" alt="Rock" id="computer-paper-image">
+        <img src="asset/Scissor.png" alt="Rock" id="computer-scissor-image">
       </div>
     </div>
 
     <div class="input">
-      <div id="rock" class="input-button">
-        <button type="">
+      <div class="input-button">
+        <button type="" id="rock-btn">
           <img src="asset/Rock.png" alt="Rock">
         </button>
       </div>
-      <div id="paper" class="input-button">
-        <button type="">
+      <div class="input-button">
+        <button type="" id="paper-btn">
           <img src="asset/Paper.png" alt="Rock">
         </button>
       </div>
-      <div id="scissor" class="input-button">
-        <button type="">
+      <div class="input-button">
+        <button type="" id="scissor-btn">
           <img src="asset/Scissor.png" alt="Rock">
         </button>
       </div>
