--- a/index.html
+++ b/index.html
@@ -23,35 +23,40 @@
     </div>
     <div class="display-container">
       <div class="display" id="player-display">
-        <img src="asset/Rock.png" alt="Rock" class="active" id="player-rock-image">
-        <img src="asset/Paper.png" alt="Rock" id="player-paper-image">
-        <img src="asset/Scissor.png" alt="Rock" id="player-scissor-image">
+        <img src="asset/Rock.png" alt="rock image" class="active" id="player-rock-image">
+        <img src="asset/Paper.png" alt="paper image" id="player-paper-image">
+        <img src="asset/Scissor.png" alt="scissor image" id="player-scissor-image">
       </div>
       <div class="display" id="computer-display">
-        <img src="asset/Rock.png" alt="Rock" class="active" id="computer-rock-image">
-        <img src="asset/Paper.png" alt="Rock" id="computer-paper-image">
-        <img src="asset/Scissor.png" alt="Rock" id="computer-scissor-image">
+        <img src="asset/Rock.png" alt="rock image" class="active" id="computer-rock-image">
+        <img src="asset/Paper.png" alt="paper image" id="computer-paper-image">
+        <img src="asset/Scissor.png" alt="scissor image" id="computer-scissor-image">
       </div>
     </div>
 
     <div class="input">
       <div class="input-button">
         <button type="" id="rock-btn">
-          <img src="asset/Rock.png" alt="Rock">
+          <img src="asset/Rock.png" alt="rock image">
         </button>
       </div>
       <div class="input-button">
         <button type="" id="paper-btn">
-          <img src="asset/Paper.png" alt="Rock">
+          <img src="asset/Paper.png" alt="paper image">
         </button>
       </div>
       <div class="input-button">
         <button type="" id="scissor-btn">
-          <img src="asset/Scissor.png" alt="Rock">
+          <img src="asset/Scissor.png" alt="scissor image">
         </button>
       </div>
     </div>
 
+    <div class="reset">
+      <button type="" id="reset-btn">
+        <img src="asset/Reset.png" alt="reset image">
+      </button>
+    </div>
   </div>
 
 </body>
